syntax = "proto3";
package report;

service ReportService {
  rpc GenerateReport(GenerateReportRequest) returns (GenerateReportResponse);
  rpc GetReportStatus(GetReportStatusRequest) returns (GetReportStatusResponse);
}

message GenerateReportRequest {
  string project_id = 1;
  string requested_by = 2;
  string email = 3;
  repeated string options = 4;
}

message GenerateReportResponse {
  string report_id = 1;
  string status = 2;
  string message = 3;
}

message GetReportStatusRequest {
  string report_id = 1;
}

message GetReportStatusResponse {
  string report_id = 1;
  string status = 2;
  string result_url = 3;
  string message = 4;
}
